I changed some elements in the interface.
No break in binary compatibily (no crash), but some details.


0.7.73 --> 0.7.74
-----------------
- EBUCore: Source/Material moved from timecodeStart to timecodeTrack

0.7.72 --> 0.7.73
-----------------
- Clean aperture size is move from width/height to its own field
- HEVC: format_Profile field changed from Profile@Level to Profile@Level@Tier
- MXF: writing library and writing application fields are cleaned up, you may face some incompatibility or different values
- AVC and HEVC: Level x.0 are replaced by Level x, because specs have no .0

0.7.71 --> 0.7.72
-----------------
- EBUCore 1.5 output is slighly modified, check the compatibility with your workflow
- PBCore2: codecid changed

0.7.70 --> 0.7.71
-----------------
- Time code striped/not striped information is moved from "Format_Settings" to "TimeCode_Striped"

0.7.69 --> 0.7.70
-----------------
- BitDepth: for very rare MXF containing PCM having quantization bits not same as stored bit depth, Stored bit depth has moved from "BitDepth" to "BitDepth_Stored". "BitDepth is the quantization bits value.

0.7.64 --> 0.7.65
-----------------
- DCP AssetMap: format name changed fro "DCP" to "DCP AM", in order to differentiate AM from PKL and CPL

0.7.63 --> 0.7.64
-----------------
- QuickTime: time code name is moved from General "OriginalSourceMedium" field to time code "Title"

0.7.62 --> 0.7.63
-----------------
- XML: dt:dt is replaced by dt (for binary data)

0.7.61 --> 0.7.62
-----------------
- MOV "menu" moved to "other", for better separation of time code tracks
- "Intermediate Codec" is renamed to "AIC" (Apple Intermediate Codec)

0.7.60 --> 0.7.61
-----------------
- MPEG-TS: Menu stream, KLVA_PID and SCTE35_PID removed and formats are in "Format" field
- DTS: moved DTS endianess and word size

0.7.58 --> 0.7.59
-----------------
- colour_primaries, transfer_characteristics, matrix_coefficients: canonicalization of results

0.7.53 --> 0.7.54
-----------------