@@ -1296,7 +1296,7 @@ size_t File__Analyze::Merge(File__Analyze &ToAdd, stream_t StreamKind, size_t St
             }
 
             //Special case with AES3: wrong container information is accepted
-            if (!IsOk && Retrieve(Stream_Audio, StreamPos_To, Audio_MuxingMode).find(__T("AES3"))!=string::npos)
+            if (!IsOk && Retrieve(Stream_Audio, StreamPos_To, Audio_MuxingMode).find(__T("SMPTE ST 337"))!=string::npos)
                 IsOk=true;
 
             if (!IsOk)
