@@ -5,6 +5,8 @@ No break in binary compatibily (no crash), but some details.
 0.7.73 --> 0.7.74
 -----------------
 - EBUCore: Source/Material moved from timecodeStart to timecodeTrack
+- AES3: generic term AES3 replaced by more precise SMPTE ST numbers (302, 331, 337)
+
 
 0.7.72 --> 0.7.73
 -----------------
